Fix horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
   line-height: 1.6;
   color: black;
   font-size: 1.2em;
-  padding: 0 10px
+  width: 100%;
 }
 
 .wrapper {
